<resources>
    <string name="app_name">Calculator</string>
    <string name="calc">Calculator</string>
    <string name="result">Results Here</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b10">+</string>
    <string name="b11">-</string>
    <string name="b12">*</string>
    <string name="b13">/</string>
    <string name="b14">=</string>
    <string name="b15">.</string>
    <string name="b16">0</string>
    <string name="b17">clear</string>
    <string name="carry_over_space">Carry Over space</string>


</resources>
